# hackathon-harness

./: .gitignore  Makefile  README.md  allgather.jl  c.jl  dctx.jl  logging.jl
bak/: install-http.jl
dctx/: CMakeLists.txt  README.md  _pydctx.c  client.c  const.c  dctx.c  dctx.h  internal.h  link.c  link.h  msg.c  msg.h  op.c  op.h  pydctx.py  server.c  test.c  zstring.c  zstring.h
http/: http.yaml  playground.jl  startup-hook.sh  tmp.jl
model/: Dockerfile  checkpoint.jl  diffeq-base.jl  exp.yaml  install2.jl  launch-config.yml  launch.py  make-docker-launch.sh  make-docker.sh  mnist.jl
non-py/: exp.yaml  install.jl  logging.jl  make-docker.sh
